// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/Login/LoginCard LoginCard renders correctly 1`] = `null`;

exports[`pages/Login/LoginCard mapStateToProps should return errors if there are errors 1`] = `
Object {
  "errorStatus": Object {
    "message": "Invalid Credentials",
  },
  "initialValues": Object {
    "username": "flexget",
  },
}
`;

exports[`pages/Login/LoginCard mapStateToProps should return no errors if there are none 1`] = `
Object {
  "errorStatus": Object {},
  "initialValues": Object {
    "username": "flexget",
  },
}
`;
